Link to python docs about strftime instead of pointing at "man" (closes #2106415)
Not ideal, but better than pointing all users at Unix command-line tools.

--- a/i18n/de.po
+++ b/i18n/de.po
@@ -2676,24 +2676,34 @@ msgid "hide filter form"
 msgstr "Filter verbergen"
 
 msgid ""
-"how to format date and time in the ui (\"man strftime\" for format "
+"how to format date and time in the ui (see <a href=\"http://docs.python.org/"
+"library/datetime.html#strftime-strptime-behavior\">this page</a> for format "
 "description)"
 msgstr ""
-"Wie formatiert man das Datum Interface im (\"man strftime\" für die "
-"Beschreibung des neuen Formats"
+"Wie formatiert man das Datum im Interface (<a href=\"http://docs.python.org/"
+"library/datetime.html#strftime-strptime-behavior\">Beschreibung des Formats</"
+"a>)"
 
-msgid "how to format date in the ui (\"man strftime\" for format description)"
+msgid ""
+"how to format date in the ui (see <a href=\"http://docs.python.org/library/"
+"datetime.html#strftime-strptime-behavior\">this page</a> for format "
+"description)"
 msgstr ""
-"Wie formatiert man das Datum im Interface (\"man strftime\" für die "
-"Beschreibung des Formats)"
+"Wie formatiert man das Datum im Interface (<a href=\"http://docs.python.org/"
+"library/datetime.html#strftime-strptime-behavior\">Beschreibung des Formats</"
+"a>)"
 
 msgid "how to format float numbers in the ui"
 msgstr "Wie man Dezimalzahlen (float) im Interface formatiert"
 
-msgid "how to format time in the ui (\"man strftime\" for format description)"
+msgid ""
+"how to format time in the ui (see <a href=\"http://docs.python.org/library/"
+"datetime.html#strftime-strptime-behavior\">this page</a> for format "
+"description)"
 msgstr ""
-"Wie man die Uhrzeit im Interface (\"man strftime\" für die "
-"Formatbeschreibung)"
+"Wie formatiert man die Uhrzeit im Interface (<a href=\"http://docs.python."
+"org/library/datetime.html#strftime-strptime-behavior\">Beschreibung des "
+"Formats</a>)"
 
 msgid "i18n_bookmark_url_fqs"
 msgstr "Parameter"
@@ -4568,6 +4578,25 @@ msgstr ""
 
 #~ msgid "follow this link if javascript is deactivated"
 #~ msgstr "Folgen Sie diesem Link, falls Javascript deaktiviert ist."
+
+#~ msgid ""
+#~ "how to format date and time in the ui (\"man strftime\" for format "
+#~ "description)"
+#~ msgstr ""
+#~ "Wie formatiert man das Datum Interface im (\"man strftime\" für die "
+#~ "Beschreibung des neuen Formats"
+
+#~ msgid ""
+#~ "how to format date in the ui (\"man strftime\" for format description)"
+#~ msgstr ""
+#~ "Wie formatiert man das Datum im Interface (\"man strftime\" für die "
+#~ "Beschreibung des Formats)"
+
+#~ msgid ""
+#~ "how to format time in the ui (\"man strftime\" for format description)"
+#~ msgstr ""
+#~ "Wie man die Uhrzeit im Interface (\"man strftime\" für die "
+#~ "Formatbeschreibung)"
 
 #~ msgid "instance schema"
 #~ msgstr "Schema der Instanz"
