--- a/i18n/es.po
+++ b/i18n/es.po
@@ -2717,25 +2717,35 @@ msgid "hide filter form"
 msgstr "Esconder el filtro"
 
 msgid ""
-"how to format date and time in the ui (\"man strftime\" for format "
+"how to format date and time in the ui (see <a href=\"http://docs.python.org/"
+"library/datetime.html#strftime-strptime-behavior\">this page</a> for format "
 "description)"
 msgstr ""
-"Formato de fecha y hora que se utilizará por defecto en la interfaz (\"man "
-"strftime\" para mayor información del formato)"
+"Formato de fecha y hora que se utilizará por defecto en la interfaz (<a href="
+"\"http://docs.python.org/library/datetime.html#strftime-strptime-behavior"
+"\">mayor información del formato</a>)"
 
-msgid "how to format date in the ui (\"man strftime\" for format description)"
+msgid ""
+"how to format date in the ui (see <a href=\"http://docs.python.org/library/"
+"datetime.html#strftime-strptime-behavior\">this page</a> for format "
+"description)"
 msgstr ""
-"Formato de fecha que se utilizará por defecto en la interfaz (\"man strftime"
-"\" para mayor información  del formato)"
+"Formato de fecha que se utilizará por defecto en la interfaz (<a href="
+"\"http://docs.python.org/library/datetime.html#strftime-strptime-behavior"
+"\">mayor información  del formato</a>)"
 
 msgid "how to format float numbers in the ui"
 msgstr ""
 "Formato de números flotantes que se utilizará por defecto en la interfaz"
 
-msgid "how to format time in the ui (\"man strftime\" for format description)"
+msgid ""
+"how to format time in the ui (see <a href=\"http://docs.python.org/library/"
+"datetime.html#strftime-strptime-behavior\">this page</a> for format "
+"description)"
 msgstr ""
-"Formato de hora que se utilizará por defecto en la interfaz (\"man strftime"
-"\" para mayor información del formato)"
+"Formato de hora que se utilizará por defecto en la interfaz (<a href="
+"\"http://docs.python.org/library/datetime.html#strftime-strptime-behavior"
+"\">mayor información del formato</a>)"
 
 msgid "i18n_bookmark_url_fqs"
 msgstr "Parámetros"
@@ -4622,6 +4632,25 @@ msgstr ""
 
 #~ msgid "follow this link if javascript is deactivated"
 #~ msgstr "Seleccione esta liga si javascript esta desactivado"
+
+#~ msgid ""
+#~ "how to format date and time in the ui (\"man strftime\" for format "
+#~ "description)"
+#~ msgstr ""
+#~ "Formato de fecha y hora que se utilizará por defecto en la interfaz "
+#~ "(\"man strftime\" para mayor información del formato)"
+
+#~ msgid ""
+#~ "how to format date in the ui (\"man strftime\" for format description)"
+#~ msgstr ""
+#~ "Formato de fecha que se utilizará por defecto en la interfaz (\"man "
+#~ "strftime\" para mayor información  del formato)"
+
+#~ msgid ""
+#~ "how to format time in the ui (\"man strftime\" for format description)"
+#~ msgstr ""
+#~ "Formato de hora que se utilizará por defecto en la interfaz (\"man "
+#~ "strftime\" para mayor información del formato)"
 
 #~ msgid "instance schema"
 #~ msgstr "Esquema de la Instancia"
