--- a/i18n/fr.po
+++ b/i18n/fr.po
@@ -2720,24 +2720,32 @@ msgid "hide filter form"
 msgstr "cacher le filtre"
 
 msgid ""
-"how to format date and time in the ui (\"man strftime\" for format "
+"how to format date and time in the ui (see <a href=\"http://docs.python.org/"
+"library/datetime.html#strftime-strptime-behavior\">this page</a> for format "
 "description)"
 msgstr ""
-"comment formater la date dans l'interface (\"man strftime\" pour la "
-"description du format)"
+"comment formater l'horodate dans l'interface (<a href=\"http://docs.python."
+"org/library/datetime.html#strftime-strptime-behavior\">description du "
+"format</a>)"
 
-msgid "how to format date in the ui (\"man strftime\" for format description)"
+msgid ""
+"how to format date in the ui (see <a href=\"http://docs.python.org/library/"
+"datetime.html#strftime-strptime-behavior\">this page</a> for format "
+"description)"
 msgstr ""
-"comment formater la date dans l'interface (\"man strftime\" pour la "
-"description du format)"
+"comment formater la date dans l'interface (<a href=\"http://docs.python.org/"
+"library/datetime.html#strftime-strptime-behavior\">description du format</a>)"
 
 msgid "how to format float numbers in the ui"
 msgstr "comment formater les nombres flottants dans l'interface"
 
-msgid "how to format time in the ui (\"man strftime\" for format description)"
+msgid ""
+"how to format time in the ui (see <a href=\"http://docs.python.org/library/"
+"datetime.html#strftime-strptime-behavior\">this page</a> for format "
+"description)"
 msgstr ""
-"comment formater l'heure dans l'interface (\"man strftime\" pour la "
-"description du format)"
+"comment formater l'heure dans l'interface (<a href=\"http://docs.python.org/"
+"library/datetime.html#strftime-strptime-behavior\">description du format</a>)"
 
 msgid "i18n_bookmark_url_fqs"
 msgstr "paramètres"
@@ -4619,3 +4627,22 @@ msgstr ""
 
 #~ msgid "follow this link if javascript is deactivated"
 #~ msgstr "suivez ce lien si javascript est désactivé"
+
+#~ msgid ""
+#~ "how to format date and time in the ui (\"man strftime\" for format "
+#~ "description)"
+#~ msgstr ""
+#~ "comment formater la date dans l'interface (\"man strftime\" pour la "
+#~ "description du format)"
+
+#~ msgid ""
+#~ "how to format date in the ui (\"man strftime\" for format description)"
+#~ msgstr ""
+#~ "comment formater la date dans l'interface (\"man strftime\" pour la "
+#~ "description du format)"
+
+#~ msgid ""
+#~ "how to format time in the ui (\"man strftime\" for format description)"
+#~ msgstr ""
+#~ "comment formater l'heure dans l'interface (\"man strftime\" pour la "
+#~ "description du format)"
