--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cubicweb (3.14.2-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Thu, 22 Dec 2011 15:09:09 +0100
+
 cubicweb (3.14.1-1) unstable; urgency=low
 
   * new upstream release
