[js, i18n] translated strings should use " not ' else they are discarded by xgettext. Closes #1892489

--- a/i18n/de.po
+++ b/i18n/de.po
@@ -1435,6 +1435,9 @@ msgstr "Klicken Sie, um diesen Wert zu löschen"
 msgid "click to edit this field"
 msgstr "Klicken Sie, um dieses Feld zu editieren"
 
+msgid "close all"
+msgstr ""
+
 msgid "comment"
 msgstr "Kommentar"
 
