[repository] ldap-feed source. Closes #2086984
datafeed based source which copy a subtree of the ldap directory
into the system database. Authentication still go through ldap though.

Pros:
* don't need temporary tables and such for multi-sources RQL queries execution
* much more flexible to enhance / configure behaviour (you simply have to
  replace the parser)
* run better when ldap isn't reachable

Cons:
* no more 'on the fly' discovery of users (though a user authenticating
  itself will be automatically added if it doesn't exist in the db yet)
* synchronization may be heavy if there are a lot of users

A new cw.server.ldaputils containing code in common between former ldapuser
and new ldapfeed sources has been introduced. Also ldapuser source now
uses url instead of custom host/protocol option so it looks like a datafeed
source (could be improved).

--- a/doc/3.15.rst
+++ b/doc/3.15.rst
@@ -10,6 +10,8 @@ API changes
 Unintrusive API changes
 -----------------------
 
+* new 'ldapfeed' source type, designed to replace 'ldapuser' source with
+  data-feed (i.e. copy based) source ideas.
 
 
 RQL
