--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cubicweb (3.14.4-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- David Douard <david.douard@logilab.fr>  Fri, 17 Feb 2012 13:06:48 +0100
+
 cubicweb (3.14.3-1) unstable; urgency=low
 
   * new upstream release
