Fix bug about missing Interval field (closes #1463996).
Implement Field and Widget dedicated to the yams entity 'Interval':

 - TimeIntervalField
 - IntervalTimeWidget

Allow to set an integer with a character as a period of time '20s', '48h' or
'3d' for instance (turn into seconds).

--- a/i18n/en.po
+++ b/i18n/en.po
@@ -922,6 +922,9 @@ msgstr ""
 msgid "a float is expected"
 msgstr ""
 
+msgid "a number (in seconds) or 20s, 10min, 24h or 4d are expected"
+msgstr ""
+
 msgid ""
 "a simple cache entity characterized by a name and a validity date. The "
 "target application is responsible for updating timestamp when necessary to "
