--- a/i18n/es.po
+++ b/i18n/es.po
@@ -967,6 +967,9 @@ msgstr "una URI designando un objeto en un repositorio de datos externo"
 msgid "a float is expected"
 msgstr "un número flotante es requerido"
 
+msgid "a number (in seconds) or 20s, 10min, 24h or 4d are expected"
+msgstr ""
+
 msgid ""
 "a simple cache entity characterized by a name and a validity date. The "
 "target application is responsible for updating timestamp when necessary to "
