--- a/i18n/fr.po
+++ b/i18n/fr.po
@@ -967,6 +967,9 @@ msgstr "une Uri désignant un objet dans un entrepôt de données externe"
 msgid "a float is expected"
 msgstr "un nombre flottant est attendu"
 
+msgid "a number (in seconds) or 20s, 10min, 24h or 4d are expected"
+msgstr "un nombre (en seconde) ou 20s, 10min, 24h ou 4d sont attendus"
+
 msgid ""
 "a simple cache entity characterized by a name and a validity date. The "
 "target application is responsible for updating timestamp when necessary to "
