--- a/i18n/en.po
+++ b/i18n/en.po
@@ -374,12 +374,6 @@ msgstr ""
 
 #, python-format
 msgid ""
-"Can't restore relation %(rtype)s of entity %(eid)s, this relation does not "
-"exists anymore in the schema."
-msgstr ""
-
-#, python-format
-msgid ""
 "Can't restore relation %(rtype)s, %(role)s entity %(eid)s doesn't exist "
 "anymore."
 msgstr ""
@@ -1220,6 +1214,9 @@ msgstr ""
 msgid "bad value"
 msgstr ""
 
+msgid "badly formatted url"
+msgstr ""
+
 msgid "base url"
 msgstr ""
 
@@ -1304,6 +1301,9 @@ msgstr ""
 msgid "can not resolve entity types:"
 msgstr ""
 
+msgid "can only have one url"
+msgstr ""
+
 msgid "can't be changed"
 msgstr ""
 
@@ -1336,6 +1336,22 @@ msgstr ""
 
 #, python-format
 msgid "can't parse %(value)r (expected %(format)s)"
+msgstr ""
+
+#, python-format
+msgid ""
+"can't restore entity %(eid)s of type %(eschema)s, target of %(rtype)s (eid "
+"%(value)s) does not exist any longer"
+msgstr ""
+
+#, python-format
+msgid ""
+"can't restore relation %(rtype)s of entity %(eid)s, this relation does not "
+"exist in the schema anymore."
+msgstr ""
+
+#, python-format
+msgid "can't restore state of entity %s, it has been deleted inbetween"
 msgstr ""
 
 #, python-format
@@ -4139,6 +4155,9 @@ msgstr ""
 msgid "undo"
 msgstr ""
 
+msgid "undo last change"
+msgstr ""
+
 msgid "unique identifier used to connect to the application"
 msgstr ""
 
@@ -4161,6 +4180,9 @@ msgid "unknown source type"
 msgstr ""
 
 msgid "unknown vocabulary:"
+msgstr ""
+
+msgid "unsupported protocol"
 msgstr ""
 
 msgid "upassword"
