--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cubicweb (3.14.5-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- David Douard <david.douard@logilab.fr>  Thu, 01 Mar 2012 15:29:29 +0100
+
 cubicweb (3.14.4-2) unstable; urgency=low
 
   * add missing build-deps to generate the documentation
