--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,21 @@
+cubicweb (3.14.6-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Tue, 13 Mar 2012 14:21:04 +0100
+
+cubicweb (3.14.5-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- David Douard <david.douard@logilab.fr>  Thu, 01 Mar 2012 15:29:29 +0100
+
+cubicweb (3.14.4-2) unstable; urgency=low
+
+  * add missing build-deps to generate the documentation
+
+ -- David Douard <david.douard@logilab.fr>  Wed, 29 Feb 2012 17:00:52 +0100
+
 cubicweb (3.14.4-1) unstable; urgency=low
 
   * New upstream release
